Fix edit book render
Picto is no more repetead and hidden by filename.
Filename try now to use all available space.

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -5,6 +5,8 @@
 
 a[href$=".epub"]   {
     background-image: url(blueprint/plugins/link-icons/icons/epub.png);
+    padding-left: 20px;
+    background-repeat: no-repeat;
 }
 
 .footer {
